<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag3_ros</name>
  <version>0.0.0</version>
  <description>Real-time AprilTag 3 detection and 6-DoF pose estimation node for ROS 2, wrapping the AprilRobotics/apriltag library.</description>
  <maintainer email="ukima1205@gmail.com">antique</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_updater</depend>
  <depend>apriltag</depend>
  <depend>apriltag3_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
