<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag3_ros</name>
  <version>0.0.0</version>
  <description>ROS 2 wrapper for the AprilTag 3 library: tag detection and pose estimation.</description>
  <maintainer email="ntq0309@mtis21.com">mtis21</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>apriltag</depend>
  <depend>apriltag3_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>generate_parameter_library</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
